added sign-up and log-in using Passage

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@passageidentity/passage-elements": "^1.21.0",
+    "@passageidentity/passage-js": "^3.14.0",
     "ai": "^3.0.8",
     "cohere-ai": "^7.7.7",
     "mongoose": "^8.2.1",
